Updating elements for Issue #24